new_k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokemon-api-deployment
  labels:
    app: pokemon-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pokemon-api
  template:
    metadata:
      labels:
        app: pokemon-api
    spec:
      containers:
        - name: pokemon-api
          image: verline/pokemon-api
          ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: pokemon-api-service
spec:
  selector:
    app: pokemon-api
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30000
